# liu

./: Cargo.toml  README.md  flake.nix
migrations/: migrate.sql
src/: api.rs  app.rs  error.rs  feed.rs  greader.rs  item.rs  lib.rs  main.rs  site.rs  tag.rs
src/model/: feed.rs  item.rs  mod.rs  tag.rs
static/html/: feed.html  index.html  item.html
