[package]
name = "liu-feed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = [ "full" ] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "chrono" ] }
actix-web = "4"
feed-rs = "1.3"
chrono = "0.4"
reqwest = "0.11"
serde = "1"
serde_json = "1"
futures = "0.3"
url = "2.4"
md-5 = "0.10"
base64 = "0.21"
handlebars = { version = "4.5", features = ["dir_source"] }